{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 47,
  "lineage": "1fc60b91-1ca9-965b-eccf-f739bf1f3b3f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08935252a36e25f85",
            "arn": "arn:aws:ec2:eu-west-1:336209744632:instance/i-0d785a0482f1a2ebf",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0d785a0482f1a2ebf",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops_key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0e46678d55664fc7c",
            "private_dns": "ip-172-31-11-245.eu-west-1.compute.internal",
            "private_ip": "172.31.11.245",
            "public_dns": "ec2-34-247-40-240.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.247.40.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0753b22db20949439",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "devops_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-9cbfa3fb",
            "tags": {
              "Name": "devops_frontend"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-006ec3ddaa5f06506"
            ]
          },
          "depends_on": [
            "aws_security_group.devops_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08935252a36e25f85",
            "arn": "arn:aws:ec2:eu-west-1:336209744632:instance/i-07030496522b9b0e0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-07030496522b9b0e0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops_key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0104c479afa337df0",
            "private_dns": "ip-172-31-2-106.eu-west-1.compute.internal",
            "private_ip": "172.31.2.106",
            "public_dns": "ec2-34-254-164-29.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.254.164.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a779ecb070fcb77f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "devops_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-9cbfa3fb",
            "tags": {
              "Name": "devops_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-006ec3ddaa5f06506"
            ]
          },
          "depends_on": [
            "aws_security_group.devops_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08935252a36e25f85",
            "arn": "arn:aws:ec2:eu-west-1:336209744632:instance/i-0b760fee5bbf25d87",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0b760fee5bbf25d87",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops_key",
            "monitoring": false,
            "primary_network_interface_id": "eni-02ff5f4d383afe1c2",
            "private_dns": "ip-172-31-7-95.eu-west-1.compute.internal",
            "private_ip": "172.31.7.95",
            "public_dns": "ec2-54-194-24-245.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.194.24.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f42597b83a0b920f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "devops_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-9cbfa3fb",
            "tags": {
              "Name": "devops_worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-006ec3ddaa5f06506"
            ]
          },
          "depends_on": [
            "aws_security_group.devops_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "devops",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:loadbalancer/app/devops-alb/f5a26f8c583810bd",
            "arn_suffix": "app/devops-alb/f5a26f8c583810bd",
            "dns_name": "devops-alb-782969617.eu-west-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:loadbalancer/app/devops-alb/f5a26f8c583810bd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-alb",
            "security_groups": [
              "sg-006ec3ddaa5f06506"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-827d25d9"
              },
              {
                "subnet_id": "subnet-9cbfa3fb"
              }
            ],
            "subnets": [
              "subnet-827d25d9",
              "subnet-9cbfa3fb"
            ],
            "tags": {
              "Environment": "devops_env"
            },
            "vpc_id": "vpc-8d15e7eb",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "depends_on": [
            "aws_security_group.devops_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "devops",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:listener/app/devops-alb/f5a26f8c583810bd/3065eeb9cda7e922",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:targetgroup/frontend/f440b047f77b49e6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:listener/app/devops-alb/f5a26f8c583810bd/3065eeb9cda7e922",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:loadbalancer/app/devops-alb/f5a26f8c583810bd",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.devops",
            "aws_lb_target_group.frontend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:targetgroup/api/fe06ce352331223b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:listener-rule/app/devops-alb/f5a26f8c583810bd/3065eeb9cda7e922/4182cea7b501969a",
            "condition": [
              {
                "field": "path-pattern",
                "values": [
                  "/api"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:listener-rule/app/devops-alb/f5a26f8c583810bd/3065eeb9cda7e922/4182cea7b501969a",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:listener/app/devops-alb/f5a26f8c583810bd/3065eeb9cda7e922",
            "priority": 300
          },
          "depends_on": [
            "aws_lb_listener.devops",
            "aws_lb_target_group.api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api_health_check",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "HEALTHY",
                    "status_code": "200"
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:listener-rule/app/devops-alb/f5a26f8c583810bd/3065eeb9cda7e922/33b1c35d4e2fc7f2",
            "condition": [
              {
                "field": "path-pattern",
                "values": [
                  "/health"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:listener-rule/app/devops-alb/f5a26f8c583810bd/3065eeb9cda7e922/33b1c35d4e2fc7f2",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:listener/app/devops-alb/f5a26f8c583810bd/3065eeb9cda7e922",
            "priority": 301
          },
          "depends_on": [
            "aws_lb_listener.devops",
            "aws_lb_target_group.api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "frontend",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:targetgroup/frontend/f440b047f77b49e6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:listener-rule/app/devops-alb/f5a26f8c583810bd/3065eeb9cda7e922/b1f3e594bc8ba974",
            "condition": [
              {
                "field": "path-pattern",
                "values": [
                  "/"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:listener-rule/app/devops-alb/f5a26f8c583810bd/3065eeb9cda7e922/b1f3e594bc8ba974",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:listener/app/devops-alb/f5a26f8c583810bd/3065eeb9cda7e922",
            "priority": 200
          },
          "depends_on": [
            "aws_lb_listener.devops",
            "aws_lb_target_group.frontend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "frontend_health_check",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "HEALTHY",
                    "status_code": "200"
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:listener-rule/app/devops-alb/f5a26f8c583810bd/3065eeb9cda7e922/33b1c35d4e2fc7f2",
            "condition": [
              {
                "field": "path-pattern",
                "values": [
                  "/health"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:listener-rule/app/devops-alb/f5a26f8c583810bd/3065eeb9cda7e922/33b1c35d4e2fc7f2",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:listener/app/devops-alb/f5a26f8c583810bd/3065eeb9cda7e922",
            "priority": 301
          },
          "depends_on": [
            "aws_lb_listener.devops",
            "aws_lb_target_group.frontend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:targetgroup/api/fe06ce352331223b",
            "arn_suffix": "targetgroup/api/fe06ce352331223b",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:targetgroup/api/fe06ce352331223b",
            "lambda_multi_value_headers_enabled": false,
            "name": "api",
            "port": 5000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-8d15e7eb"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:targetgroup/frontend/f440b047f77b49e6",
            "arn_suffix": "targetgroup/frontend/f440b047f77b49e6",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:targetgroup/frontend/f440b047f77b49e6",
            "lambda_multi_value_headers_enabled": false,
            "name": "frontend",
            "port": 3000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-8d15e7eb"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:targetgroup/api/fe06ce352331223b-20190913124038005300000002",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:targetgroup/api/fe06ce352331223b",
            "target_id": "i-07030496522b9b0e0"
          },
          "depends_on": [
            "aws_instance.server",
            "aws_lb_target_group.api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "frontend",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:targetgroup/frontend/f440b047f77b49e6-20190913124037853600000001",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:336209744632:targetgroup/frontend/f440b047f77b49e6",
            "target_id": "i-0d785a0482f1a2ebf"
          },
          "depends_on": [
            "aws_instance.frontend",
            "aws_lb_target_group.frontend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:336209744632:security-group/sg-006ec3ddaa5f06506",
            "description": "sg for devops test",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006ec3ddaa5f06506",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "devops_sg",
            "name_prefix": null,
            "owner_id": "336209744632",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-8d15e7eb"
          }
        }
      ]
    }
  ]
}